--- a/team-details.html
+++ b/team-details.html
@@ -8,15 +8,15 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/x-icon" href="img/logo/icon.svg">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/aos.min.css">
-    <link rel="stylesheet" href="css/icofont.min.css">
-    <link rel="stylesheet" href="css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/aos.min.css">
+    <link rel="stylesheet" href="assets/css/icofont.min.css">
+    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 
     <script>
@@ -37,7 +37,7 @@
     <div id="back__preloader">
         <div id="back__circle_loader"></div>
         <div class="back__loader_logo">
-            <img loading="lazy" src="img/logo/half logo.svg" alt="Preload">
+            <img loading="lazy" src="assets/img/logo/half logo.svg" alt="Preload">
         </div>
     </div>
     <!-- pre loader area end -->
@@ -131,7 +131,7 @@
                         <div class="headerarea__component__wrap">
                             <div class="headerarea__component">
                                 <div class="headerarea__logo">
-                                    <a href="index.html"><img src="img/logo/full-logo.svg" alt="Bastun Logo"></a>
+                                    <a href="index.html"><img src="assets/img/logo/full-logo.svg" alt="Bastun Logo"></a>
                                 </div>
                             </div>
                             <div class="headerarea__component">
@@ -214,7 +214,7 @@
                     </div>
                     <div class="mobile__log">
                         <div class="mobile__log--title"><a class="mobile__log--link" href="index.html">
-                                <img class="mobile__log--img" src="img/logo/full-logo.svg" alt="logo-img">
+                                <img class="mobile__log--img" src="assets/img/logo/full-logo.svg" alt="logo-img">
                             </a></div>
                     </div>
 
@@ -233,7 +233,7 @@
             <div class="offcanvas__inner">
                 <div class="offcanvas__logo">
                     <a class="offcanvas__logo_link" href="index.html">
-                        <img src="img/logo/Logo_2.png" alt="Logo-img">
+                        <img src="assets/img/logo/Logo_2.png" alt="Logo-img">
                     </a>
                     <button class="offcanvas__close--btn" data-offcanvas>Close</button>
                 </div>
@@ -424,7 +424,7 @@
 
 
         <!-- breadcrumbarea__start -->
-        <div class="breadcrumbarea" style="background: url(img/about/about__bg__1.jpg);">
+        <div class="breadcrumbarea" style="background: url(assets/img/about/about__bg__1.jpg);">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
@@ -464,7 +464,7 @@
                                 class="team__member__3__single team__member__border text-center single__transform team__details__top">
                                 <div class="team__member__3__single__inner">
                                     <div class="team__member__3__img">
-                                        <img src="img/team/Shoaib.png" alt="">
+                                        <img src="assets/img/team/Shoaib.png" alt="">
                                     </div>
 
                                     <div class="team__member__icon">
@@ -658,7 +658,7 @@
         <!-- service__section__start -->
 
                 <div class="service__2 sp_top_140 sp_bottom_70 special__spacing" id="service__area"
-                    style="background: var(--pinkcolor) url(img/service/service__bg__5.png);">
+                    style="background: var(--pinkcolor) url(assets/img/service/service__bg__5.png);">
                     <div class="container">
 
                         <div class="row">
@@ -669,7 +669,7 @@
                                     class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                                     <div class="service__single__inner">
                                         <div class="service__img">
-                                            <img src="img/service/HAMID.png" alt="">
+                                            <img src="assets/img/service/HAMID.png" alt="">
                                             <div class="service__bg__img">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="165" height="150"
                                                     viewBox="0 0 165 150" fill="none">
@@ -721,7 +721,7 @@
                                     class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                                     <div class="service__single__inner">
                                         <div class="service__img">
-                                            <img src="img/service/AHMAD.png" alt="">
+                                            <img src="assets/img/service/AHMAD.png" alt="">
                                             <div class="service__bg__img">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="165" height="150"
                                                     viewBox="0 0 165 150" fill="none">
@@ -773,7 +773,7 @@
                                     class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                                     <div class="service__single__inner">
                                         <div class="service__img">
-                                            <img src="img/service/TAHIR.png" alt="">
+                                            <img src="assets/img/service/TAHIR.png" alt="">
                                             <div class="service__bg__img">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="165" height="150"
                                                     viewBox="0 0 165 150" fill="none">
@@ -825,7 +825,7 @@
                                     class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                                     <div class="service__single__inner">
                                         <div class="service__img">
-                                            <img src="img/service/daniyal.png" alt="">
+                                            <img src="assets/img/service/daniyal.png" alt="">
                                             <div class="service__bg__img">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="165" height="150"
                                                     viewBox="0 0 165 150" fill="none">
@@ -877,7 +877,7 @@
                                     class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                                     <div class="service__single__inner">
                                         <div class="service__img">
-                                            <img src="img/service/Untitled design (26).png" alt="">
+                                            <img src="assets/img/service/Untitled design (26).png" alt="">
                                             <div class="service__bg__img">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="165" height="150"
                                                     viewBox="0 0 165 150" fill="none">
@@ -929,7 +929,7 @@
                                     class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                                     <div class="service__single__inner">
                                         <div class="service__img">
-                                            <img src="img/service/Untitled design (25).png" alt="">
+                                            <img src="assets/img/service/Untitled design (25).png" alt="">
                                             <div class="service__bg__img">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="165" height="150"
                                                     viewBox="0 0 165 150" fill="none">
@@ -980,7 +980,7 @@
                                     class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                                     <div class="service__single__inner">
                                         <div class="service__img">
-                                            <img src="img/service/SAIF.png" alt="">
+                                            <img src="assets/img/service/SAIF.png" alt="">
                                             <div class="service__bg__img">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="165" height="150"
                                                     viewBox="0 0 165 150" fill="none">
@@ -1031,7 +1031,7 @@
                                     class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                                     <div class="service__single__inner">
                                         <div class="service__img">
-                                            <img src="img/service/SAIM.png" alt="">
+                                            <img src="assets/img/service/SAIM.png" alt="">
                                             <div class="service__bg__img">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="165" height="150"
                                                     viewBox="0 0 165 150" fill="none">
@@ -1082,7 +1082,7 @@
                                     class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                                     <div class="service__single__inner">
                                         <div class="service__img">
-                                            <img src="img/service/awais.png" alt="">
+                                            <img src="assets/img/service/awais.png" alt="">
                                             <div class="service__bg__img">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="165" height="150"
                                                     viewBox="0 0 165 150" fill="none">
@@ -1162,14 +1162,14 @@
         <!--whattappicon-->
         <!-- footer start -->
         <div class="footer position-relative sp_top_250 pink__bg__color" id="footer__area"
-            style="background-image: url(img/footer/footer_1.png);">
+            style="background-image: url(assets/img/footer/footer_1.png);">
 
             <div class="bastun__brand__badge bastun__brand__badge__footer">
                 <div class="bastun__brand__badge__inner position-relative">
                     <a href="index.html">
 
-                        <img class="bbb__animate" src="img/footer/brand__badge.png" alt="Footer badge">
-                        <img class="bbb__icon" src="img/footer/brand__badge__inner.png" alt="Footer icon badge">
+                        <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
+                        <img class="bbb__icon" src="assets/img/footer/brand__badge__inner.png" alt="Footer icon badge">
                     </a>
                 </div>
             </div>
@@ -1180,7 +1180,7 @@
                         <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
                             <div class="footer__widget footer__left">
                                 <div class="footer__logo">
-                                    <img src="img/logo/full-logo.svg" alt="">
+                                    <img src="assets/img/logo/full-logo.svg" alt="">
                                 </div>
                                 <div class="footer__text">
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -1310,13 +1310,13 @@
 
 
     <!-- JS here -->
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/filter.js"></script>
-    <script src="js/glightbox.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="assets/js/popper.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/filter.js"></script>
+    <script src="assets/js/glightbox.min.js"></script>
+    <script src="assets/js/plugins.js"></script>
+    <script src="assets/js/swiper-bundle.min.js"></script>
+    <script src="assets/js/main.js"></script>
 
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
