--- a/team.html
+++ b/team.html
@@ -11,16 +11,16 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/x-icon" href="img/logo/icon.svg">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/aos.min.css">
-    <link rel="stylesheet" href="css/icofont.min.css">
-    <link rel="stylesheet" href="css/glightbox.min.css">
-    <link rel="stylesheet" href="css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/aos.min.css">
+    <link rel="stylesheet" href="assets/css/icofont.min.css">
+    <link rel="stylesheet" href="assets/css/glightbox.min.css">
+    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 
     <script>
@@ -41,7 +41,7 @@
     <div id="back__preloader">
         <div id="back__circle_loader"></div>
         <div class="back__loader_logo">
-            <img loading="lazy" src="img/logo/icon.svg" alt="Preload">
+            <img loading="lazy" src="assets/img/logo/icon.svg" alt="Preload">
         </div>
     </div>
     <!-- pre loader area end -->
@@ -133,7 +133,7 @@
                         <div class="headerarea__component__wrap">
                             <div class="headerarea__component">
                                 <div class="headerarea__logo">
-                                    <a href="index.html"><img src="img/logo/full-logo.svg" alt="Bastun Logo"></a>
+                                    <a href="index.html"><img src="assets/img/logo/full-logo.svg" alt="Bastun Logo"></a>
                                 </div>
                             </div>
                             <div class="headerarea__component">
@@ -217,7 +217,7 @@
                     </div>
                     <div class="mobile__log">
                         <div class="mobile__log--title"><a class="mobile__log--link" href="index.html">
-                                <img class="mobile__log--img" src="img/logo/full-logo.svg" alt="logo-img">
+                                <img class="mobile__log--img" src="assets/img/logo/full-logo.svg" alt="logo-img">
                             </a></div>
                     </div>
 
@@ -236,7 +236,7 @@
             <div class="offcanvas__inner">
                 <div class="offcanvas__logo">
                     <a class="offcanvas__logo_link" href="index.html">
-                        <img src="img/logo/Logo_2.png" alt="Logo-img">
+                        <img src="assets/img/logo/Logo_2.png" alt="Logo-img">
                     </a>
                     <button class="offcanvas__close--btn" data-offcanvas>Close</button>
                 </div>
@@ -426,7 +426,7 @@
         <!-- End Offcanvas header menu -->
 
         <!-- breadcrumbarea__start -->
-        <div class="breadcrumbarea " style="background: url(img/about/about__bg__1.jpg);">
+        <div class="breadcrumbarea " style="background: url(assets/img/about/about__bg__1.jpg);">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
@@ -465,7 +465,7 @@
                         <div class="team__member__3__single team__member__border text-center single__transform">
                             <div class="team__member__3__single__inner">
                                 <div class="team__member__3__img">
-                                    <img src="img/service/AHMAD.png" alt="Ahmad">
+                                    <img src="assets/img/service/AHMAD.png" alt="Ahmad">
                                 </div>
                                 <div class="team__member__name">
                                     <h6><a href="team-details.html">Mr. Ahmad</a></h6>
@@ -493,7 +493,7 @@
                         <div class="team__member__3__single text-center team__member__border single__transform">
                             <div class="team__member__3__single__inner">
                                 <div class="team__member__3__img">
-                                    <img src="img/service/TAHIR.png" alt="">
+                                    <img src="assets/img/service/TAHIR.png" alt="">
                                 </div>
                                 <div class="team__member__name">
                                     <h6><a href="team-details.html">Mr. Tahir</a></h6>
@@ -521,7 +521,7 @@
                         <div class="team__member__3__single text-center team__member__border single__transform">
                             <div class="team__member__3__single__inner">
                                 <div class="team__member__3__img">
-                                    <img src="img/service/SAIF.png" alt="">
+                                    <img src="assets/img/service/SAIF.png" alt="">
                                 </div>
                                 <div class="team__member__name">
                                     <h6><a href="team-details.html">Mr. Saif Rahman</a></h6>
@@ -548,7 +548,7 @@
                         <div class="team__member__3__single team__member__border text-center single__transform">
                             <div class="team__member__3__single__inner">
                                 <div class="team__member__3__img">
-                                    <img src="img/service/awais.png" alt="">
+                                    <img src="assets/img/service/awais.png" alt="">
                                 </div>
                                 <div class="team__member__name">
                                     <h6><a href="team-details.html">Mr. Awais</a></h6>
@@ -576,7 +576,7 @@
                         <div class="team__member__3__single team__member__border text-center single__transform">
                             <div class="team__member__3__single__inner">
                                 <div class="team__member__3__img">
-                                    <img src="img/team/Shoaib.png" alt="">
+                                    <img src="assets/img/team/Shoaib.png" alt="">
                                 </div>
                                 <div class="team__member__name">
                                     <h6><a href="team-details.html">Mr. Shoaib Jamil</a></h6>
@@ -604,7 +604,7 @@
                         <div class="team__member__3__single text-center team__member__border single__transform">
                             <div class="team__member__3__single__inner">
                                 <div class="team__member__3__img">
-                                    <img src="img/service/Kashif.png" alt="">
+                                    <img src="assets/img/service/Kashif.png" alt="">
                                 </div>
                                 <div class="team__member__name">
                                     <h6><a href="team-details.html">Mr. Kashif</a></h6>
@@ -632,7 +632,7 @@
                         <div class="team__member__3__single text-center team__member__border single__transform">
                             <div class="team__member__3__single__inner">
                                 <div class="team__member__3__img">
-                                    <img src="img/service/Mr-Saim.png" alt="">
+                                    <img src="assets/img/service/Mr-Saim.png" alt="">
                                 </div>
                                 <div class="team__member__name">
                                     <h6><a href="team-details.html">Mr. Saim</a></h6>
@@ -659,7 +659,7 @@
                         <div class="team__member__3__single team__member__border text-center single__transform">
                             <div class="team__member__3__single__inner">
                                 <div class="team__member__3__img">
-                                    <img src="img/service/Waleed.png" alt="">
+                                    <img src="assets/img/service/Waleed.png" alt="">
                                 </div>
                                 <div class="team__member__name">
                                     <h6><a href="team-details.html">Mr. Waleed</a></h6>
@@ -697,7 +697,7 @@
 
         <!-- blog__section__start -->
         <div class="blog__3 sp_bottom_200 sp_top_140 special__spacing"
-            style="background: url(img/blog/blog__bg_2.png);">
+            style="background: url(assets/img/blog/blog__bg_2.png);">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12" data-aos="fade-up"
@@ -723,7 +723,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="1800">
                         <div class="blog__4__single blog__3__single single__transform">
                             <div class="blog__4__img">
-                                <img src="img/blog/UIUX.png" alt="">
+                                <img src="assets/img/blog/UIUX.png" alt="">
                             </div>
                             <div class="blog__4__time">
                                 <p><span class="text__gradient ">08 May, 2024</span></p>
@@ -742,7 +742,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2100">
                         <div class="blog__4__single blog__3__single single__transform">
                             <div class="blog__4__img">
-                                <img src="img/blog/web.png" alt="">
+                                <img src="assets/img/blog/web.png" alt="">
                             </div>
                             <div class="blog__4__time">
                                 <p><span class="text__gradient ">08 May, 2024</span></p>
@@ -784,14 +784,14 @@
         <!--whattappicon-->
      <!-- footer start -->
      <div class="footer position-relative sp_top_250 pink__bg__color" id="footer__area"
-     style="background-image: url(img/footer/footer_1.png);">
+     style="background-image: url(assets/img/footer/footer_1.png);">
 
      <div class="bastun__brand__badge bastun__brand__badge__footer">
          <div class="bastun__brand__badge__inner position-relative">
              <a href="index.html">
 
-                 <img class="bbb__animate" src="img/footer/brand__badge.png" alt="Footer badge">
-                 <img class="bbb__icon" src="img/footer/brand__badge__inner.png" alt="Footer icon badge">
+                 <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
+                 <img class="bbb__icon" src="assets/img/footer/brand__badge__inner.png" alt="Footer icon badge">
              </a>
          </div>
      </div>
@@ -802,7 +802,7 @@
                  <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
                      <div class="footer__widget footer__left">
                          <div class="footer__logo">
-                             <img src="img/logo/full-logo.svg" alt="">
+                             <img src="assets/img/logo/full-logo.svg" alt="">
                          </div>
                          <div class="footer__text">
                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -932,13 +932,13 @@
 
 
     <!-- JS here -->
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/filter.js"></script>
-    <script src="js/glightbox.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="assets/js/popper.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/filter.js"></script>
+    <script src="assets/js/glightbox.min.js"></script>
+    <script src="assets/js/plugins.js"></script>
+    <script src="assets/js/swiper-bundle.min.js"></script>
+    <script src="assets/js/main.js"></script>
 
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
