game page content fix

--- a/GameDevelop.html
+++ b/GameDevelop.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
@@ -538,7 +538,8 @@
                                     <a class="default__button sidebar__button__1" target="_blank"
                                         href="assets/img/download.pdf">Download PDF<i class="icofont-file-pdf"></i></a>
                                     <a class="default__button btn__black" target="_blank"
-                                        href="assets/img/download.docx">Download DOC<i class="icofont-file-document"></i></a>
+                                        href="assets/img/download.docx">Download DOC<i
+                                            class="icofont-file-document"></i></a>
                                 </div>
 
                             </div>
@@ -556,23 +557,15 @@
                                 <h4>Management Consulting</h4>
                             </div>
                             <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Odio facilisis mauris sit amet massa
-                                    vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
-                                    vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
-                                    vehicula. Arcu vitae elementum curabitur vitae nunc. Duis ultricies lacus sed turpis
-                                    tincidunt id aliquet risus feugiat. Aenean vel elit scelerisque mauris pellentesque
-                                    pulvinar. Turpis egestas maecenas pharetra convallis. Ac turpis egestas maecenas
-                                    pharetra convallis. Morbi tincidunt augue interdum velit euismod. Accumsan sit amet
-                                    nulla facilisi morbi tempus. Scelerisque eleifend donec pretium vulputate sapien nec
-                                    sagittis aliquam.</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Odio facilisis mauris sit amet massa
-                                    vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
-                                    vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
-                                    vehicula. Arcu vitae elementum curabitur vitae nunc. Duis ultricies lacus sed turpis
-                                    tincidunt id aliquet risus feugiat. Aenean vel elit scelerisque mauris pellentesque
-                                    pulvinar.</p>
+                                <p>There is always the development of new technologies as well as trends that try to
+                                    define today's methods of creating games and the ways of experiencing them. Our
+                                    full-service game development solutions at Digital Minds On include both 2D & 3D
+                                    game development packages. Come with me to explore how to develop a video game, why
+                                    choose Digital Minds On for game development, and what are the benefits of
+                                    developing games with Unreal Engine 5. </p>
+                                <h2>Unreal Engine 5 games list</h2>
+                                <p>We provide a variety of services designed to meet the diverse needs of our clients in
+                                    the gaming sector:</p>
                             </div>
                             <div class="service__details__planning" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="row">
@@ -584,42 +577,137 @@
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                                         <div class="service__details__planning__inner">
                                             <div class="service__details__planning__heading">
-                                                <h6>Implementation Planning:</h6>
+                                                <h6>Custom Game Development:</h6>
                                             </div>
                                             <div class="service__details__planning__text">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Odio
-                                                    facilisis mauris sit amet massa vitae tortor condimentum.</p>
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Odio
-                                                    facilisis mauris sit amet massa vitae tortor condimentum.</p>
+                                                <p>We focus on mice and keyboards for your novelties and concepts which
+                                                    include, a platformer, adventure game, or even simulation.</p>
+                                                <p>2D and 3D Game Development: We have the best video game developers
+                                                    who are experts in both 2D and 3D space, which allows us to</p>
                                             </div>
+
+
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                            <div class="service__details__planning__text">
+                                <p>create interesting designs for all the games that we are going to release.</p>
+                            </div>
+                            <div class="service__details__planning__heading">
+                                <h6>2D and 3D Game Development:</h6>
+                            </div>
+                            <div class="service__details__planning__text">
+                                <p>We have the best video game developers who are experts in both 2D and 3D space, which
+                                    allows us to create interesting designs for all the games that we are going to
+                                    release.</p>
+                            </div>
+                            <div class="service__details__planning__heading">
+                                <h6>Unreal Engine 5 Expertise:</h6>
+                            </div>
+                            <div class="service__details__planning__text">
+                                <p>By using DET functionalities in Unreal Engine 5 we generate impressive visuals and
+                                    engaging gameplay that consumers are keen to engage in, and that improves their
+                                    gaming experience.</p>
+                            </div>
+                            <div class="service__details__planning__heading">
+                                <h6>Mobile Game Development:</h6>
+                            </div>
+                            <div class="service__details__planning__text">
+                                <p>We also provide cross-platform game development so your game runs optimally on any
+                                    operating system Android or iOS.</p>
+                            </div>
 
                             <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4>Execution and Monitoring:</h4>
+                                <h2>Why Choose Digital Minds On?</h2>
                             </div>
                             <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Odio facilisis mauris sit amet massa
-                                    vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
-                                    vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
-                                    vehicula. Arcu vitae elementum curabitur vitae nunc. Duis ultricies lacus sed turpis
-                                    tincidunt id aliquet risus feugiat. Aenean vel elit scelerisque mauris pellentesque
-                                    pulvinar. Turpis egestas maecenas pharetra convallis. Ac turpis egestas maecenas
-                                    pharetra convallis. Morbi tincidunt augue interdum velit euismod. Accumsan sit amet
-                                    nulla facilisi morbi tempus. Scelerisque eleifend donec pretium vulputate sapien nec
-                                    sagittis aliquam.</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Odio facilisis mauris sit amet massa
-                                    vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
-                                    vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
-                                    vehicula. Arcu vitae elementum curabitur vitae nunc. Duis ultricies lacus sed turpis
-                                    tincidunt id aliquet risus feugiat. Aenean vel elit scelerisque mauris pellentesque
-                                    pulvinar.</p>
+                                <p>As for game development, we always take into consideration that each project is as
+                                    individual as you are. Here are some reasons to choose Digital Minds On for your
+                                    next game development project:<br><br>
+
+                                    <b>Experienced Platinum Games Developers:</b> These must be top-notch video game
+                                    developers as our team is made up of some of the best in the video game development
+                                    industry with experience of many years in different fields of game development such
+                                    as players, multiplayer, and online game players.<br><br>
+
+                                    <b>Cutting-Edge Tools:</b> Our software is updated to the latest game development
+                                    software so as to make sure that your project is developed using the most current
+                                    software.<br><br>
+
+                                    <b> Client-Centered Approach:</b> In our process, we value integration and
+                                    consultation during the process of development. Our team's strategy is to
+                                    collaborate with clients at every level of project delivery, ensuring that their
+                                    vision is completely fulfilled.
+                                </p>
+                            </div>
+
+                            <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
+                                <h2>The Power of Unreal Engine 5</h2>
+                            </div>
+                            <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
+                                <p>Unreal Engine 5 (UE5) has been one of the service offerings that set us out to be
+                                    different from our competition competitors. It is amazing how Unreal Engine 5
+                                    changing the art of designing as well as the practice of games. Here’s why UE5 is
+                                    essential for modern game development:<br><br>
+
+                                    <b>Enhanced Graphics:</b> Universal Engine 5 is capable of creating realistic images
+                                    that seem as though they were taken from real life and hence, make games look good
+                                    to play.<br><br>
+
+                                    <b>Real-Time Rendering:</b> It helps us build real-time environments that can
+                                    respond instantly to the actions of the players thus improving the gameplay.<br><br>
+
+                                    <b>Wide Adoption:</b> Some of the most recent titles in the list of games using
+                                    Unreal Engine 5 provide one with a glimpse into its full capabilities, thus making
+                                    it a go-to market for companies solving for game development potential.
+                                </p>
+                            </div>
+
+                            <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
+                                <h2>What It Takes to Build a Popular Video Game?</h2>
+                            </div>
+                            <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
+                                <p>Creating a video game follows a plan that will guarantee the end result to be the
+                                    best it can be. Here’s a brief overview of our development process at Digital Minds
+                                    On:<br><br>
+
+                                    <b>Conceptualization:</b> Starting with conception and prototyping of the style,
+                                    themes, mechanics, plots, and design of the characters with the clients.<br><br>
+
+                                    <b>Design:</b> After choosing a concept, our designers draw out thorough
+                                    illustrations and produce models that cover characters, areas, and interphase of use
+                                    in order to design the look of the particular game.<br><br>
+
+                                    <b>Development:</b> We create Unreal 5 games and compile all the aspects of the game
+                                    including the graphical interface sounds, and mechanics of the game, among
+                                    others.<br><br>
+
+                                    <b>Testing and Optimization:</b> A lot of preparations are done before reaching the
+                                    stage of launching the product on the market and this includes testing the software
+                                    for bugs that could hinder its proper functioning on the various operating
+                                    systems.<br><br>
+
+                                    <b>Launch and Support:</b> We support the marketing process of your game as well as
+                                    help you after the game has been launched, making sure that the game works properly.
+
+                                </p>
+                            </div>
+
+                            <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
+                                <h2>Conclusion</h2>
+                            </div>
+                            <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
+                                <p>Digital Minds On offers the best game development services with a special focus on
+                                    breakthrough services. It doesn’t matter if you want to build a 3D game, would like
+                                    to take full advantage of Unreal Engine 5’s features, or need assistance after your
+                                    game has been released, we’re here for you.
+                                    <br><br>
+                                    If you are willing to transform your concepts or games, Digital Minds On is the
+                                    perfect partner for you. Choose our company to help you generate the video game that
+                                    is going to conquer players and become unique within the massive variety of present
+                                    games. Together, we can unlock the future of game development!
+                                </p>
                             </div>
                             <div class="service__details__button" data-aos="fade-up" data-aos-duration="1500">
                                 <a class="default__button" href="#">GET A FREE QUOTE</a>
@@ -659,7 +747,7 @@
                     <a href="index.html">
 
                         <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
-                        <img class="bbb__icon" src="assets/img/footer/brand__badge__inner.png" alt="Footer icon badge">
+                        <img class="bbb__icon" src="assets/img/logo/icon.svg" alt="Footer icon badge">
                     </a>
                 </div>
             </div>
@@ -767,7 +855,7 @@
                     <div class="row align-items-center">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                             <div class="copyright__left">
-                      <p>Copyright © 2024 <a href="index.html">Digitalminds on.</a> All Right Reserved</p>
+                                <p>Copyright © 2024 <a href="index.html">Digitalminds on.</a> All Right Reserved</p>
                             </div>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
